<resources>
    <string name="app_name">Screenshot Tile</string>
    <string name="app_name_long">&#x200c;Screenshot Tile (NoRoot)</string>
    <string name="tile_label">&#x200c;Screenshot</string>
    <string name="tile_floating">&#x200c;Floating Screenshot Button</string>
    <string name="tile_floating_label">&#x200c;Floating</string>
    <string name="tile_floating_subtitle">&#x200c;Screenshot Button</string>
    <string name="title_delay">&#x200c;Delay</string>
    <string name="more_setting">&#x200c;More Settings</string>
    <string name="open_settings">&#x200c;Open settings</string>
    <string name="floating_button_settings">&#x200c;Floating button settings</string>
    <string name="left_screenshot_right_menu">&#x200c;Left: Screenshot, right: Settings</string>
    <string name="partial_screenshot">&#x200c;Select area</string>
    <string name="long_screenshot">&#x200c;Long screenshot</string>
    <string name="options_dialog">&#x200c;Show options</string>
    <string name="file_format">&#x200c;File format</string>
    <string name="setting_delay_entry_default">&#x200c;Instant</string>
    <string name="setting_delay_entry_1s">&#x200c;1s</string>
    <string name="setting_delay_entry_2s">&#x200c;2s</string>
    <string name="setting_delay_entry_5s">&#x200c;5s</string>
    <string name="take_screenshot_1s_delayed">&#x200c;Take screenshot after 1s</string>
    <string name="take_screenshot_2s_delayed">&#x200c;Take screenshot after 2s</string>
    <string name="take_screenshot_5s_delayed">&#x200c;Take screenshot after 5s</string>
    <string name="toggle_floating_button">&#x200c;Toggle floating button</string>
    <string name="show_count_down">&#x200c;Show count down</string>
    <string name="cancel_count_down">&#x200c;Tap to cancel delay</string>
    <string name="cancel_count_down_summary">&#x200c;Tap the screen to immediately take a screenshot before the countdown ends</string>
    <string name="use_native_screenshot">&#x200c;Use native screenshot method</string>
    <string name="use_native_screenshot_summary">&#x200c;Simulate home + power button press</string>
    <string name="use_native_screenshot_unsupported">&#x200c;Requires Android 9 Pie</string>
    <string name="use_native_screenshot_unavailable">&#x200c;Accessibility service is disabled</string>
    <string name="use_native_screenshot_option_default">&#x200c;Native method uses system\'s default</string>
    <string name="use_native_screenshot_option_android11">&#x200c;Disable \'Use system defaults\' to use this</string>
    <string name="accessibility_service_description">&#x200c;If this service is enabled, the app can simulate a power+home button press to take screenshots.\nOn some devices enabling this method may be more stable or faster than the default method.\n\nIf you enable the service here, you also need to enable the "native method" in the app settings.</string>
    <string name="use_system_defaults">&#x200c;Use system defaults</string>
    <string name="use_system_defaults_summary">&#x200c;Requires Android 11</string>
    <string name="use_system_defaults_summary_on">&#x200c;Using default storage directory, format, screenshot editor and notifications</string>
    <string name="use_system_defaults_summary_off">&#x200c;Using app\'s settings</string>
    <string name="setting_floating_button">&#x200c;Floating button</string>
    <string name="setting_floating_button_summary">&#x200c;You can also switch it on/off from the quick settings tile</string>
    <string name="setting_floating_button_unavailable">&#x200c;Accessibility service is disabled</string>
    <string name="setting_floating_button_unsupported">&#x200c;Requires Android 9 Pie</string>
    <string name="setting_floating_button_scale">&#x200c;Floating button size</string>
    <string name="setting_floating_button_scale_summary">&#x200c;Adjust size of floating button</string>
    <string name="setting_floating_button_scale_current">&#x200c;Current size: %1$d (Default: %2$d)</string>
    <string name="setting_floating_button_hide_after">&#x200c;Hide floating button after screenshot</string>
    <string name="setting_floating_button_hide_after_summary">&#x200c;Automatically remove the floating button after you took a screenshot</string>
    <string name="setting_floating_button_show_close">&#x200c;Show a [X]/close button next to floating button</string>
    <string name="setting_floating_button_show_close_summary">&#x200c;Lets you remove the floating button without opening the quick settings</string>
    <string name="setting_floating_button_show_close_dialog_title">&#x200c;Close button emoji</string>
    <string name="setting_floating_button_show_close_dialog_description">&#x200c;Type a text or an emoji that will appear as the close button</string>
    <string name="setting_floating_button_shutter">&#x200c;Floating button theme</string>
    <string name="setting_floating_button_shutter_square">&#x200c;Square</string>
    <string name="setting_floating_button_shutter_round">&#x200c;Round</string>
    <string name="setting_floating_button_delay">&#x200c;Delay (Floating button)</string>
    <string name="setting_broadcast_secret">&#x200c;Broadcast intent password</string>
    <string name="setting_broadcast_secret_description">&#x200c;A secret phrase to allow other applications (like MacroDroid or Tasker) to initiate screenshots</string>
    <string name="setting_storage_directory">&#x200c;Save location</string>
    <string name="setting_storage_directory_description">&#x200c;Folder to save screenshots in</string>
    <string name="setting_file_name_pattern">&#x200c;File name</string>
    <string name="setting_file_name_placeholders_title">&#x200c;Use these placeholders in the file name</string>
    <string name="setting_file_name_placeholders" formatted="false">&#x200c;<![CDATA[%timestamp% - time as yyyy-MM-dd_HH-mm-ss\n
%counter% - counts the number of screenshots\n
%random% - a random UUID\n
%randint% - a random number\n
%app% - name of the foreground app\n
%package% - package name of the foreground app]]></string>
    <string name="setting_tile_action">&#x200c;Tile action</string>
    <string name="setting_tile_long_press_action">&#x200c;Tile long-press action</string>
    <string name="setting_floating_action">&#x200c;Floating button action</string>
    <string name="setting_voice_interaction_action">&#x200c;Assistant action</string>
    <string name="setting_dark_theme">&#x200c;Dark theme</string>
    <string name="setting_dark_theme_system">&#x200c;System</string>
    <string name="setting_dark_theme_off">&#x200c;Disabled</string>
    <string name="setting_dark_theme_on">&#x200c;Enabled</string>
    <string name="setting_notification_buttons">&#x200c;Notification buttons</string>
    <string name="setting_notification_buttons_description">&#x200c;Select up to three buttons that appear below the screenshot notification</string>
    <string name="setting_notification_buttons_max_three">&#x200c;Please choose a maximum of three buttons</string>
    <string name="setting_prevent_if_locked">&#x200c;Prevent screenshots if the device is locked</string>
    <string name="setting_prevent_if_locked_summary">&#x200c;No more accidental \"pocket dialing\" screenshots</string>
    <string name="setting_pe_overwrite_file">&#x200c;Overwrite file</string>
    <string name="setting_pe_overwrite_file_summary">&#x200c;The included photo editor tries to overwrite the current image instead of creating a new file</string>
    <string name="notification_settings">&#x200c;Notifications</string>
    <string name="notification_settings_on">&#x200c;Enabled</string>
    <string name="notification_settings_off">&#x200c;Disabled</string>
    <string name="setting_post_actions">&#x200c;Subsequent actions</string>
    <string name="setting_post_actions_description">&#x200c;Choose what happens after the screenshot was taken</string>
    <string name="button_history">&#x200c;Recent screenshots</string>
    <string name="button_history_description">&#x200c;View your recent screenshots including files that were not saved to the gallery</string>
    <string name="history_title">&#x200c;Screenshot history</string>
    <string name="restore_default_values">&#x200c;Restore default values</string>
    <string name="post_action_save_to_storage">&#x200c;Save image to gallery</string>
    <string name="post_action_show_toast">&#x200c;Show a \"Toast\" notification. A small popup that disappears after 2 seconds</string>
    <string name="post_action_show_notification">&#x200c;Show a regular notification. You can change the buttons (Edit,Share,…) below the notification under \"More Settings\"</string>
    <string name="post_action_play_tone">&#x200c;Play a sound</string>
    <string name="post_action_empty">&#x200c;Don\'t open the screenshot</string>
    <string name="post_action_open_in_post">&#x200c;Open in \"Details\" view</string>
    <string name="post_action_open_in_post_crop">&#x200c;Crop the image</string>
    <string name="post_action_open_in_photo_editor">&#x200c;Open the included photo editor</string>
    <string name="post_action_open_in_external_editor">&#x200c;Open in an external photo editor</string>
    <string name="post_action_open_in_external_viewer">&#x200c;Open in a photo viewer or the gallery</string>
    <string name="post_action_open_share">&#x200c;Share the screenshot</string>
    <string name="post_settings_audio_output_stream">&#x200c;Audio output stream:</string>
    <string name="post_settings_audio_tone_duration">&#x200c;Tone duration:</string>
    <string name="post_settings_audio_tone_select">&#x200c;Tone:</string>
    <string name="move_to_storage_directory">&#x200c;Move into gallery</string>
    <string name="button_clear">&#x200c;Clear</string>
    <string name="button_clear_confirm">&#x200c;Do you want to delete all temporary files?\nThis will delete all files in %s\n\n(These files are usually not visible in your gallery)</string>
    <string name="file_title">&#x200c;Screenshot</string>
    <string name="file_description">&#x200c;Screenshot taken on %1$s</string>
    <string name="file_description_simple_date_format">&#x200c;yyyy/MM/dd HH:mm:ss</string>
    <string name="notification_title">&#x200c;Screenshot taken</string>
    <string name="notification_body">&#x200c;Tap to see the image</string>
    <string name="notification_channel_description">&#x200c;Shows a notification when you have taken a screenshot</string>
    <string name="notification_foreground_title">&#x200c;Taking a screenshot…</string>
    <string name="notification_foreground_body">&#x200c;Processing screenshot… Tap to cancel</string>
    <string name="long_screenshot_review_description">&#x200c;Adjust where each following screenshot starts. Higher values cut more from the top of that frame.</string>
    <string name="long_screenshot_review_save">&#x200c;Save long screenshot</string>
    <string name="long_screenshot_review_discard">&#x200c;Discard</string>
    <string name="take_screenshot">&#x200c;Take a screenshot</string>
    <string name="main_floating_button_title">&#x200c;Floating button</string>
    <string name="setting_keep_screenshot_history_summary" comment="Placeholder is replaced with the translation of `Recent screenshots`">&#x200c;Stores the file names of screenshots in a list. This is required for the function \"%1$s\"</string>
    <string name="setting_show_hide_in_specific_apps">&#x200c;Show/Hide in specific apps</string>
    <string name="setting_filtermode_blacklist">&#x200c;Blacklist</string>
    <string name="setting_filtermode_whitelist">&#x200c;Whitelist</string>
    <string name="setting_filtermode_select_apps">&#x200c;Select apps</string>
    <string name="setting_filtermode_search">&#x200c;Search</string>
    <string name="setting_filtermode_select_all">&#x200c;Select all</string>
    <string name="setting_filtermode_invert_selection">&#x200c;Invert selection</string>
</resources>