<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <shortcut
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutId="takeScreenshot"
        android:shortcutLongLabel="@string/take_screenshot"
        android:shortcutShortLabel="@string/tile_label"
        tools:targetApi="N_MR1">
        <intent
            android:action="com.github.cvzi.screenshottile.NoDisplayActivity.EXTRA_SCREENSHOT"
            android:targetClass="com.github.cvzi.screenshottile.activities.NoDisplayActivity"
            android:targetPackage="com.github.cvzi.screenshottile" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutId="openSettings"
        android:shortcutLongLabel="@string/open_settings"
        android:shortcutShortLabel="@string/open_settings"
        tools:targetApi="N_MR1">
        <intent
            android:action="com.github.cvzi.screenshottile.SettingDialogActivity.START_SERVICE"
            android:targetClass="com.github.cvzi.screenshottile.activities.SettingDialogActivity"
            android:targetPackage="com.github.cvzi.screenshottile" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@mipmap/ic_launcher_floating"
        android:shortcutId="toggleFloatingButton"
        android:shortcutLongLabel="@string/setting_floating_button"
        android:shortcutShortLabel="@string/setting_floating_button"
        tools:targetApi="N_MR1">
        <intent
            android:action="com.github.cvzi.screenshottile.NoDisplayActivity.EXTRA_FLOATING_BUTTON"
            android:targetClass="com.github.cvzi.screenshottile.activities.NoDisplayActivity"
            android:targetPackage="com.github.cvzi.screenshottile" />
    </shortcut>
</shortcuts>
