<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="5dp"
    android:paddingEnd="5dp"
    tools:context=".activities.MainActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView style="@style/CardViewPrimary">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textDescGeneral"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_post_actions_description"
                        android:textAppearance="@android:style/TextAppearance.Material.Body2" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView style="@style/CardViewSecondary">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <com.google.android.material.switchmaterial.SwitchMaterial
                                android:id="@+id/switchSaveToStorage"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="" />

                            <LinearLayout
                                android:layout_weight="1"
                                android:layout_gravity="center_vertical"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/post_action_save_to_storage" />

                                <TextView
                                    android:id="@+id/textViewSaveImageLocation"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="" />

                            </LinearLayout>


                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <com.google.android.material.switchmaterial.SwitchMaterial
                                android:id="@+id/switchShowToast"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="" />

                            <TextView
                                android:layout_weight="1"
                                android:layout_gravity="center_vertical"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/post_action_show_toast" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <com.google.android.material.switchmaterial.SwitchMaterial
                                android:id="@+id/switchShowNotification"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="" />

                            <TextView
                                android:layout_weight="1"
                                android:layout_gravity="center_vertical"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/post_action_show_notification" />
                        </TableRow>

                    </TableLayout>

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/radioButtonEmpty"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/post_action_empty" />

                        <RadioButton
                            android:id="@+id/radioButtonOpenInPost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/post_action_open_in_post" />

                        <RadioButton
                            android:id="@+id/radioButtonOpenInPostCrop"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/post_action_open_in_post_crop" />

                        <RadioButton
                            android:id="@+id/radioButtonOpenInPhotoEditor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/post_action_open_in_photo_editor" />

                        <RadioButton
                            android:id="@+id/radioButtonOpenInExternalEditor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/post_action_open_in_external_editor" />

                        <RadioButton
                            android:id="@+id/radioButtonOpenInExternalViewer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/post_action_open_in_external_viewer" />


                        <RadioButton
                            android:id="@+id/radioButtonOpenShare"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/post_action_open_share" />

                    </RadioGroup>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView style="@style/CardViewPrimary">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <Button
                        android:id="@+id/buttonResetValues"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/restore_default_values" />

                    <Button
                        android:id="@+id/buttonSettings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more_setting" />

                    <Button
                        android:id="@+id/buttonHistory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/history_title" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>