<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="5dp"
    android:paddingEnd="5dp"
    tools:context=".activities.MainActivity">

    <androidx.cardview.widget.CardView style="@style/CardViewPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/textDescGeneral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/history_title"
                android:textAppearance="@android:style/TextAppearance.Material.Body2" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchKeepHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/setting_keep_screenshot_history_summary"
                android:text="@string/notification_settings_on" />

            <Button
                android:id="@+id/buttonClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_clear" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView style="@style/CardViewSecondary">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="640dp" />

    </androidx.cardview.widget.CardView>

</LinearLayout>
