<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:paddingStart="5dp"
    android:paddingEnd="5dp"
    tools:context=".activities.MainActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView style="@style/CardViewPrimary">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switchFloatingButtonEnabled"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/main_floating_button_title"
                        android:textAppearance="@android:style/TextAppearance.Material.Body2" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/buttonMoreSettings"
                            style="@style/Widget.Material3.Button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/more_setting"
                            android:textSize="12.1sp" />

                        <Button
                            android:id="@+id/buttonFloatingButtonSettings"
                            style="@style/Widget.Material3.Button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/floating_button_settings"
                            android:textSize="12.1sp" />

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView style="@style/CardViewSecondary">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/switchFloatingFilterEnabled"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@android:style/TextAppearance.Material.Body2" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/setting_show_hide_in_specific_apps" />
                    </LinearLayout>

                    <RadioGroup
                        android:id="@+id/radioGroupFilterMode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:tag="BLACKLIST"
                            android:text="@string/setting_filtermode_blacklist" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:tag="WHITELIST"
                            android:text="@string/setting_filtermode_whitelist" />

                    </RadioGroup>

                </LinearLayout>


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView style="@style/CardViewSecondary">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/setting_filtermode_select_apps" />

                    <EditText
                        android:id="@+id/editTextSearch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="text"
                        android:hint="@string/setting_filtermode_search" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/packagesRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/buttonSelectAll"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/setting_filtermode_select_all" />

                        <Button
                            android:id="@+id/buttonInvertSelection"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/setting_filtermode_invert_selection" />

                    </LinearLayout>

                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
